--- a/report/main.tex
+++ b/report/main.tex
@@ -13,49 +13,33 @@
 
 \title{Reproducing BugsInPy}
 
-\author{\IEEEauthorblockN{1\textsuperscript{st} Given Name Surname}
+\author{\IEEEauthorblockN{Faustino Aguilar}
 \IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address or ORCID}
+University of Panama \\
+Panama City, Panama \\
+\textit{email address or ORCID}}
 \and
-\IEEEauthorblockN{2\textsuperscript{nd} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address or ORCID}
+\IEEEauthorblockN{Samuel Grayson}
+\IEEEauthorblockA{Dept. of Computer Science \\
+University of Illinois at Urbana Champaign \\
+Urbana, IL \\
+https://orcid.org/0000-0001-5411-356X}
 \and
-\IEEEauthorblockN{3\textsuperscript{rd} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address or ORCID}
-\and
-\IEEEauthorblockN{4\textsuperscript{th} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address or ORCID}
-\and
-\IEEEauthorblockN{5\textsuperscript{th} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address or ORCID}
-\and
-\IEEEauthorblockN{6\textsuperscript{th} Given Name Surname}
-\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-\textit{name of organization (of Aff.)}\\
-City, Country \\
-email address or ORCID}
+\IEEEauthorblockN{Darko Marinov}
+\IEEEauthorblockA{Dept. of Computer Science \\
+University of Illinois at Urbana Champaign \\
+Urbana, IL \\
+https://orcid.org/0000-0001-5023-3492}
 }
 
 \maketitle
 
 \begin{abstract}
   We present our experience on replicating a bug dataset for the Python programming language.
-  The bug dataset provides some information about the software environment, but this environment decays quickly into something uninstallable.
-  We assess the reproducibility over time and improve the reproducibility of the dataset.
+  We assess the reproducibility of the original dataset less than three years after its original publication.
+  The bug dataset provides some information about the software environment, but this information can be incomplete or it can decay into something uninstallable.
+  We rectify as many of these problems as we can and redesign the original dataset to be more easily reusable and reproducible by future authors.
+  Based on our experience, we offer suggestions to Python artifact authors to improve their reproducibility. 
 \end{abstract}
 
 \begin{IEEEkeywords}
