Fixed up LaTeX compilation

--- a/report/IEEEabrv.bib
+++ b/report/IEEEabrv.bib
@@ -21,7 +21,7 @@ http://www.ieee.org/
 Special thanks to Laura Hyslop, Ken Rawson, Kevin Lisankie and
 Mona Mittra of the IEEE for their help in obtaining the information needed
 to compile this file. Also, Volker Kuhlmann, Moritz Borgmann,
-Yannick Berker, Nicolás Barabino, Chuanren Wu and Santiago Cogollos Borras
+Yannick Berker, Nicols Barabino, Chuanren Wu and Santiago Cogollos Borras
 kindly provided some corrections and additions.
 
 
