Add PR soarsmu/BugsInPy#68

--- a/report/pip1.bib
+++ b/report/pip1.bib
@@ -1,6 +1,6 @@
 
 @online{noauthor_pip_nodate,
-	title = {pip install - pip documentation v23.2},
+	title = {cmdoption-no-binary - pip install - pip documentation v23.2},
 	url = {https://pip.pypa.io/en/stable/cli/pip_install/#cmdoption-no-binary},
 	urldate = {2023-07-17},
 	file = {pip install - pip documentation v23.2:C\:\\Users\\user\\Zotero\\storage\\2AJWP8TC\\pip_install.html:text/html},
@@ -42,4 +42,21 @@
 	url = {https://docs.anaconda.com/free/anaconda/applications/docker/},
 	urldate = {2023-07-17},
 	file = {Docker — Anaconda Documentation:C\:\\Users\\user\\Zotero\\storage\\BT9PGJDY\\docker.html:text/html},
+}
+
+@online{noauthor_pip_nodate_e,
+	title = {cmdoption-e - pip install - pip documentation v23.2},
+	url = {https://pip.pypa.io/en/stable/cli/pip_install/#cmdoption-e},
+	urldate = {2023-07-17},
+	file = {pip install - pip documentation v23.2:C\:\\Users\\user\\Zotero\\storage\\2AF4PQ9P\\pip_install.html:text/html},
+}
+
+@online{noauthor_fixes_nodate,
+	title = {Fixes -e option requires 1 argument. by faustinoaq · Pull Request \#68 · soarsmu/{BugsInPy}},
+	url = {https://github.com/soarsmu/BugsInPy/pull/68},
+	abstract = {The current approach uses xargs -n 1, which splits lines with spaces into two, resulting in broken installations for projects such as black, cookiecutter, keras, luigi, pandas, sanic, and thefuck. ...},
+	titleaddon = {{GitHub}},
+	urldate = {2023-07-17},
+	langid = {english},
+	file = {Snapshot:C\:\\Users\\user\\Zotero\\storage\\F4T3HCRH\\68.html:text/html},
 }
