Change main author

--- a/report/main.tex
+++ b/report/main.tex
@@ -16,17 +16,17 @@
 
 \title{Source-Code Support for Replicating a Bugs Dataset}
 
-\author{\IEEEauthorblockN{Samuel Grayson}
-\IEEEauthorblockA{Dept. of Computer Science \\
-University of Illinois at Urbana Champaign \\
-Urbana, IL \\
-orcid.org/0000-0001-5411-356X}
-\and
-\IEEEauthorblockN{Faustino Aguilar}
+\author{\IEEEauthorblockN{Faustino Aguilar}
 \IEEEauthorblockA{Dept. of Computer Engineering \\
 University of Panama \\
 Panama City, Panama \\
 orcid.org/0009-0000-1375-1143}
+\and  
+\IEEEauthorblockN{Samuel Grayson}
+\IEEEauthorblockA{Dept. of Computer Science \\
+University of Illinois at Urbana Champaign \\
+Urbana, IL \\
+orcid.org/0000-0001-5411-356X}
 \and
 \IEEEauthorblockN{Darko Marinov}
 \IEEEauthorblockA{Dept. of Computer Science \\
