--- a/report/main.tex
+++ b/report/main.tex
@@ -4,6 +4,7 @@
 
 \usepackage[backend=biber,style=ieee]{biblatex}
 \usepackage{graphicx}
+\usepackage{cleveref}
 \addbibresource{main.bib}
 \addbibresource{faustinoaq1.bib}
 \addbibresource{registry.bib}
