Added writing revisions

--- a/report/main.tex
+++ b/report/main.tex
@@ -4,8 +4,7 @@
 
 \usepackage[backend=biber,style=ieee]{biblatex}
 \usepackage{graphicx}
-\usepackage{cleveref}
-\addbibresource{main.bib}
+\addbibresource{samuelgrayson.bib}
 \addbibresource{faustinoaq1.bib}
 \addbibresource{registry.bib}
 \addbibresource{pip1.bib}
@@ -13,9 +12,11 @@
 
 \input{pandoc_header.tex}
 
+\usepackage{cleveref}
+
 \begin{document}
 
-\title{Source-Code Support for Replicating a Bugs Dataset}
+\title{Reproduction and Improvement on the BugsInPy Dataset}
 
 \author{\IEEEauthorblockN{Faustino Aguilar}
 \IEEEauthorblockA{Dept. of Computer Engineering \\
