--- a/report/samuelgrayson.bib
+++ b/report/samuelgrayson.bib
@@ -1,4 +1,3 @@
-
 @inproceedings{widyasari_bugsinpy_2020,
 	location = {New York, {NY}, {USA}},
 	title = {{BugsInPy}: a database of existing bugs in Python programs to enable controlled testing and debugging studies},
@@ -15,4 +14,28 @@
 	urldate = {2023-07-08},
 	date = {2020-11-08},
 	keywords = {automated program repair, project-bugsinpy, software engineering},
+}
+
+@online{cpython_developers_status_nodate,
+	title = {Status of Python Versions},
+	url = {https://devguide.python.org/versions/},
+	abstract = {The main branch is currently the future Python 3.13, and is the only branch that accepts new features. The latest release for each Python version can be found on the download page. Python Release C...},
+	titleaddon = {Python Developer's Guide},
+	author = {{CPython} developers},
+	urldate = {2023-07-17},
+	langid = {english},
+	keywords = {project-bugsinpy},
+	file = {Snapshot:/home/sam/Zotero/storage/MTLKDQIT/versions.html:text/html},
+}
+
+@online{acm_inc_staff_artifact_2020,
+	title = {Artifact Review and Badging},
+	url = {https://www.acm.org/publications/policies/artifact-review-and-badging-current},
+	abstract = {Result and Artifact Review documentation and badges - V.1.1},
+	author = {{ACM} Inc. staff},
+	urldate = {2023-01-19},
+	date = {2020-08-24},
+	langid = {english},
+	keywords = {reproducibility, project-acm-rep, project-bugsinpy},
+	file = {Snapshot:/home/sam/Zotero/storage/PGDE3ZAE/artifact-review-and-badging-current.html:text/html},
 }
