--- a/report/main.tex
+++ b/report/main.tex
@@ -84,6 +84,6 @@ httpie,1,buggy,fail
 
 After which, the results will be in \texttt{bugsinpy-index.csv} This is the new result index.
 
-See the \texttt{README.md} for moe information.
+See the \texttt{README.md} for more information.
 
 \end{document}
