Fix typo and move bib resources

--- a/report/main.tex
+++ b/report/main.tex
@@ -6,9 +6,7 @@
 \usepackage[backend=biber,style=ieee]{biblatex}
 \usepackage{graphicx}
 \addbibresource{samuelgrayson.bib}
-\addbibresource{faustinoaq1.bib}
-\addbibresource{registry.bib}
-\addbibresource{pip1.bib}
+\addbibresource{faustinoaguilar.bib}
 \addbibresource{IEEEabrv.bib}
 
 \input{pandoc_header.tex}
@@ -19,24 +17,24 @@
 
 \title{Reproduction and Improvement on the BugsInPy Dataset}
 
-%% \author{\IEEEauthorblockN{Faustino Aguilar}
-%% \IEEEauthorblockA{Dept. of Computer Engineering \\
-%% University of Panama \\
-%% Panama City, Panama \\
-%% orcid.org/0009-0000-1375-1143}
-%% \and  
-%% \IEEEauthorblockN{Samuel Grayson}
-%% \IEEEauthorblockA{Dept. of Computer Science \\
-%% University of Illinois at Urbana Champaign \\
-%% Urbana, IL \\
-%% orcid.org/0000-0001-5411-356X}
-%% \and
-%% \IEEEauthorblockN{Darko Marinov}
-%% \IEEEauthorblockA{Dept. of Computer Science \\
-%% University of Illinois at Urbana Champaign \\
-%% Urbana, IL \\
-%% orcid.org/0000-0001-5023-3492}
-%% }
+\author{\IEEEauthorblockN{Faustino Aguilar}
+\IEEEauthorblockA{Dept. of Computer Engineering \\
+University of Panama \\
+Panama City, Panama \\
+orcid.org/0009-0000-1375-1143}
+\and  
+\IEEEauthorblockN{Samuel Grayson}
+\IEEEauthorblockA{Dept. of Computer Science \\
+University of Illinois at Urbana Champaign \\
+Urbana, IL \\
+orcid.org/0000-0001-5411-356X}
+\and
+\IEEEauthorblockN{Darko Marinov}
+\IEEEauthorblockA{Dept. of Computer Science \\
+University of Illinois at Urbana Champaign \\
+Urbana, IL \\
+orcid.org/0000-0001-5023-3492}
+}
 
 \maketitle
 
@@ -84,6 +82,6 @@ httpie,1,buggy,fail
 
 After which, the results will be in \texttt{bugsinpy-index.csv} This is the new result index.
 
-See the \texttt{README.md} for moe information.
+See the \texttt{README.md} for more information.
 
 \end{document}
