--- a/report/main.tex
+++ b/report/main.tex
@@ -18,20 +18,20 @@
 \title{Reproduction and Improvement on the BugsInPy Dataset}
 
 \author{\IEEEauthorblockN{Faustino Aguilar}
-\IEEEauthorblockA{Dept. of Computer Engineering \\
+\IEEEauthorblockA{Dept.\ of Computer Engineering \\
 University of Panama \\
 Panama City, Panama \\
 orcid.org/0009-0000-1375-1143}
 \and  
 \IEEEauthorblockN{Samuel Grayson}
-\IEEEauthorblockA{Dept. of Computer Science \\
-University of Illinois at Urbana Champaign \\
+\IEEEauthorblockA{Dept.\ of Computer Science \\
+University of Illinois Urbana-Champaign \\
 Urbana, IL \\
 orcid.org/0000-0001-5411-356X}
 \and
 \IEEEauthorblockN{Darko Marinov}
-\IEEEauthorblockA{Dept. of Computer Science \\
-University of Illinois at Urbana Champaign \\
+\IEEEauthorblockA{Dept.\ of Computer Science \\
+University of Illinois Urbana-Champaign \\
 Urbana, IL \\
 orcid.org/0000-0001-5023-3492}
 }
