--- a/report/main.tex
+++ b/report/main.tex
@@ -15,7 +15,7 @@
 
 \begin{document}
 
-\title{Reproduction and Improvement on the BugsInPy Dataset}
+\title{Reproducing and Improving the BugsInPy Dataset}
 
 \author{\IEEEauthorblockN{Faustino Aguilar}
 \IEEEauthorblockA{Dept.\ of Computer Engineering \\
@@ -26,13 +26,13 @@ orcid.org/0009-0000-1375-1143}
 \IEEEauthorblockN{Samuel Grayson}
 \IEEEauthorblockA{Dept.\ of Computer Science \\
 University of Illinois Urbana-Champaign \\
-Urbana, IL \\
+Urbana, IL, USA \\
 orcid.org/0000-0001-5411-356X}
 \and
 \IEEEauthorblockN{Darko Marinov}
 \IEEEauthorblockA{Dept.\ of Computer Science \\
 University of Illinois Urbana-Champaign \\
-Urbana, IL \\
+Urbana, IL, USA \\
 orcid.org/0000-0001-5023-3492}
 }
 
