Add updated references and pdf

--- a/report/faustinoaguilar.bib
+++ b/report/faustinoaguilar.bib
@@ -162,3 +162,10 @@
 	langid = {english},
 	file = {Snapshot:C\:\\Users\\user\\Zotero\\storage\\F4T3HCRH\\68.html:text/html},
 }
+
+@online{flake8_moved,
+	title = {4.0.0 – 2021-10-10 — flake8 6.1.0 documentation},
+	url = {https://flake8.pycqa.org/en/latest/release-notes/4.0.0.html},
+	urldate = {2023-08-23},
+	file = {4.0.0 – 2021-10-10 — flake8 6.1.0 documentation:C\:\\Users\\user\\Zotero\\storage\\E67M2XFR\\4.0.0.html:text/html},
+}
