--- a/report/main.tex
+++ b/report/main.tex
@@ -62,7 +62,7 @@ A rolling release of all our code and data can be found at \url{https://github.c
 Our code includes:
 \begin{itemize}
   \item \texttt{Dockerfile} docker file setup to build projects images.
-  \item \texttt{docker-compose.yml} docker orchestration to run projects containers.
+  \item \texttt{docker-compose.yml} orchestration to run containers.
   \item \texttt{framework/bin/bugsinpy-testall} script to automate execution of BugsInPy framework scripts.
 \end{itemize}
 
@@ -79,7 +79,6 @@ httpie,1,buggy,fail
 \end{verbatim*}
 
 After these commands, the new results will be in the file named \texttt{bugsinpy-index.csv}.
-
 See \texttt{README.md} for more detailed information.
 
 \end{document}
