--- a/report/main.tex
+++ b/report/main.tex
@@ -62,7 +62,7 @@ A rolling release of all our code and data can be found at \url{https://github.c
 Our code includes:
 \begin{itemize}
   \item \texttt{Dockerfile} docker file setup to build projects images.
-  \item \texttt{docker-compose.yml} docker orchestration to run projects containers.
+  \item \texttt{docker-compose.yml} orchestration to run containers.
   \item \texttt{framework/bin/bugsinpy-testall} script to automate execution of BugsInPy framework scripts.
 \end{itemize}
 
